<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import
            type="android.view.View"/>
        <variable
            name="calculatorVM"
            type="com.rimapps.intracalc.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/buttonBackground"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/buttonBackground"
            android:ems="10"
            android:text="@{calculatorVM.exp}"
            android:gravity="right|center_vertical"
            android:textColor="@color/displayValuesText"
            android:textSize="48sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/buttonBackground"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:textColor="@color/displayValuesText"
            android:textSize="48sp"
            app:layout_constraintTop_toBottomOf="@id/expression"
            tools:ignore="RtlHardcoded"
            tools:layout_editor_absoluteX="0dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_goneMarginTop="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_7"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_8"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_9"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendOperator}"
                    android:text="@string/divide"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_4"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_5"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_6"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendOperator}"
                    android:text="@string/multiply"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"
                    android:text="@string/_1"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,OnClick"

                    />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_2"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_3"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnSubtract"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendOperator}"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnDecimal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/dot"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,OnClick" />

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/_0"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnComma"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendNumber}"

                    android:text="@string/comma"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{calculatorVM.appendOperator}"
                    android:text="@string/plus"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnBopen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{()->calculatorVM.bOpen()}"
                    android:text="@string/bracketOpen"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnBclose"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{()->calculatorVM.bClose()}"
                    android:text="@string/bracketClose"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnBackSpace"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_specials_background"
                    android:onClick="@{()->calculatorVM.delete()}"
                    android:text="@string/del"
                    android:textAllCaps="false"
                    android:textColor="@color/cbuttonText"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="@{()->calculatorVM.calculate()}"
                    android:text="@string/equal"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,OnClick" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/median"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_specials_background"
                    android:text="@string/median"
                    android:onClick="@{calculatorVM.onMedianOpt}"
                    android:textAllCaps="false"
                    android:textColor="@color/cbuttonText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/mean"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_specials_background"
                    android:text="@string/mean"
                    android:onClick="@{calculatorVM.onMeanOpt}"
                    android:textAllCaps="false"
                    android:textColor="@color/cbuttonText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_specials_background"
                    android:onClick="@{()->calculatorVM.reset()}"
                    android:text="@string/c"
                    android:textColor="@color/cbuttonText"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,OnClick" />

            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>